--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,14 @@ dependencies:
   riverpod_annotation: ^2.3.5
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
+  phosphor_flutter: ^2.1.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   build_runner: ^2.4.10
   custom_lint: ^0.6.4
   flutter_launcher_icons: ^0.13.1
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   freezed: ^2.5.2
   json_serializable: ^6.8.0
   riverpod_generator: ^2.4.0
@@ -30,7 +32,6 @@ dev_dependencies:
 
 flutter:
   assets:
-    - assets/launcher-icon.png
-    - assets/splash/
+    - assets/
 
   uses-material-design: true
