chore(deps): add `url_launcher`

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_annotation: ^4.9.0
   phosphor_flutter: ^2.1.0
   flutter_svg: ^2.0.10+1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   build_runner: ^2.4.10
