--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   phosphor_flutter: ^2.1.0
   flutter_svg: ^2.0.10+1
   url_launcher: ^6.3.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.4.10
@@ -27,6 +29,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_lints: ^4.0.0
   freezed: ^2.5.2
+  hive_generator: ^2.0.1
   json_serializable: ^6.8.0
   riverpod_generator: ^2.4.0
   riverpod_lint: ^2.3.10
